--- a/Client-app/package.json
+++ b/Client-app/package.json
@@ -39,7 +39,9 @@
     "chart.js": "^2.9.4",
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
+    "html-to-text": "^8.0.0",
     "jquery": "^3.6.0",
+    "ng-zorro-antd": "^12.0.1",
     "ngx-loading": "^8.0.0",
     "ngx-spinner": "^12.0.0",
     "popper.js": "^1.16.1",
@@ -55,7 +57,7 @@
     "@nguniversal/builders": "^12.0.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.19",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
