--- a/Server-app/requirements.txt
+++ b/Server-app/requirements.txt
@@ -1,21 +1,100 @@
+alabaster==0.7.8
+amqp==5.0.6
 APScheduler==3.7.0
+apt-xapian-index==0.49
 asgiref==3.3.4
+Babel==2.8.0
+beautifulsoup4==4.9.3
+billiard==3.6.4.0
+blinker==1.4
+capstone==4.0.2
+celery==5.1.2
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.4
+command-not-found==0.3
+cryptography==3.3.2
+cupshelpers==1.0
+dbus-python==1.2.16
+distro==1.5.0
+distro-info==1.0
 Django==3.2.3
 django-cors-headers==3.7.0
 django-environ==0.4.5
 django-optimized-image==0.3.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
+docutils==0.16
+evdev==1.4.0
+gpg===1.14.0-unknown
+html5lib==1.1
+httplib2==0.18.1
 idna==2.10
+imagesize==1.2.0
+jeepney==0.6.0
+Jinja2==2.11.2
+kazam==1.4.5
+keyring==22.2.0
+kombu==5.1.0
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.5
+lxml==4.6.3
+MarkupSafe==1.1.1
+netifaces==0.10.9
+oauthlib==3.1.0
+olefile==0.46
+packaging==20.9
+pbr==5.6.0
+pexpect==4.8.0
 Pillow==8.2.0
+prompt-toolkit==3.0.20
 psycopg2==2.8.6
+pycairo==1.16.2
+pycups==2.0.1
+Pygments==2.7.1
+PyGObject==3.38.0
 PyJWT==2.1.0
+pyparsing==2.4.7
+PyQt5==5.15.4
+PyQt5-sip==12.8.1
+python-apt===2.2.0-ubuntu0.21.04.1
+python-dateutil==2.8.2
+python-debian==0.1.39
+python-magic==0.4.20
 pytz==2021.1
+pyxdg==0.27
+PyYAML==5.3.1
+reportlab==3.5.66
 requests==2.25.1
+roman==2.0.0
+ROPGadget==6.6
+SecretStorage==3.3.1
+setproctitle==1.2.1
+simplejson==3.17.2
 six==1.16.0
+snowballstemmer==2.1.0
+soupsieve==2.2
+Sphinx==3.5.4
 sqlparse==0.4.1
+systemd-python==234
+testresources==2.0.1
 tinify==1.5.1
 tzlocal==2.1
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.26.4
+usb-creator==0.3.7
+vine==5.0.0
+wadllib==1.3.5
+wcwidth==0.2.5
+webencodings==0.5.1
+xdg==5
+xkit==0.0.0
