--- a/.github/workflows/production_deploy.yml
+++ b/.github/workflows/production_deploy.yml
@@ -1,15 +1,16 @@
-name: GitHub Actions Demo
+name: Deploy On Server
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: Install SSH Key
-      uses: shimataro/ssh-key-action@v2
+    - name: executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@master
       with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
-        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-    - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-    - name: Deploy
-      run: ssh -i ${{ secrets.SERVER_SSH_KEY }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'bash ~/Project-workire/scripts/deploy'
+        port: ${{ secrets.SSH_PORT }}
+        script: bash ~/Project-workire/scripts/deploy
