--- a/.github/workflows/production_deploy.yml
+++ b/.github/workflows/production_deploy.yml
@@ -7,11 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: echo "🎉 testing secrets ${{ secrets.SSH_USER }}."
-    - name: executing remote ssh commands using ssh key
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        port: ${{ secrets.SSH_PORT }}
-        script: bash ~/Project-workire/scripts/deploy
+    # - name: executing remote ssh commands using ssh key
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.SSH_HOST }}
+    #     username: ${{ secrets.SSH_USER }}
+    #     key: ${{ secrets.SERVER_SSH_KEY }}
+    #     port: ${{ secrets.SSH_PORT }}
+    #     script: bash ~/Project-workire/scripts/deploy
