--- a/Client-app/package.json
+++ b/Client-app/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.1.0",
+    "@angular/animations": "^14.1.0",
     "@angular/cdk": "^14.1.0",
-    "@angular/common": "~14.1.0",
-    "@angular/compiler": "~14.1.0",
-    "@angular/core": "~14.1.0",
-    "@angular/forms": "~14.1.0",
-    "@angular/localize": "~14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.1.0",
     "@angular/material": "^12.0.0",
-    "@angular/platform-browser": "~14.1.0",
-    "@angular/platform-browser-dynamic": "~14.1.0",
-    "@angular/platform-server": "~14.1.0",
-    "@angular/router": "~14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/platform-server": "^14.1.0",
+    "@angular/router": "^14.1.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@mobiscroll/angular-lite": "^4.10.8",
     "@ng-bootstrap/ng-bootstrap": "^9.1.2",
@@ -52,9 +52,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~14.1.0",
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
     "@nguniversal/builders": "^12.0.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
