--- a/Client-app/package.json
+++ b/Client-app/package.json
@@ -66,5 +66,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "typescript": "~4.7.4"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
