--- a/Server-app/requirements.txt
+++ b/Server-app/requirements.txt
@@ -1,30 +1,28 @@
 alabaster==0.7.8
-amqp==5.0.6
+amqp==5.1.1
 APScheduler==3.7.0
-asgiref==3.3.4
+asgiref==3.5.2
 Babel==2.8.0
-beautifulsoup4==4.9.3
+backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 blinker==1.4
 capstone==4.0.2
-celery==5.1.2
-certifi==2020.12.5
+certifi==2022.6.15
+cffi==1.15.1
 chardet==4.0.0
-click==7.1.2
+charset-normalizer==2.1.1
+click==8.1.3
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.4
-cryptography==3.3.2
+cryptography==38.0.1
 decorator==5.1.0
 distro==1.5.0
 distro-info==1.0
-Django==3.2.3
-django-cors-headers==3.7.0
-django-environ==0.4.5
-django-optimized-image==0.3.0
-djangorestframework==3.12.4
-djangorestframework-simplejwt==4.6.0
+Django==4.1.1
+django-environ==0.9.0
+djangorestframework==3.13.1
 docutils==0.16
 future==0.18.2
 geographiclib==1.52
@@ -34,35 +32,34 @@ httplib2==0.18.1
 idna==2.10
 imagesize==1.2.0
 jeepney==0.6.0
-Jinja2==2.11.2
+Jinja2==3.1.2
 kombu==5.1.0
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.5
 lxml==4.6.3
-MarkupSafe==1.1.1
+MarkupSafe==2.1.1
 netifaces==0.10.9
 oauthlib==3.1.0
 olefile==0.46
 packaging==20.9
 pbr==5.6.0
 pexpect==4.8.0
-Pillow==8.2.0
-prompt-toolkit==3.0.20
-psycopg2==2.8.6
+Pillow==9.2.0
+prompt-toolkit==3.0.31
+psycopg2==2.9.3
+ptyprocess==0.7.0
+pycparser==2.21
 Pygments==2.7.1
-PyJWT==2.1.0
-pyparsing==2.4.7
-PyQt5==5.15.4
-PyQt5-sip==12.8.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-debian==0.1.39
 python-magic==0.4.20
-pytz==2021.1
+pytz==2022.2.1
 pyxdg==0.27
 PyYAML==5.3.1
 ratelim==0.1.6
 reportlab==3.5.66
-requests==2.25.1
+requests==2.28.1
 roman==2.0.0
 ROPGadget==6.6
 SecretStorage==3.3.1
@@ -72,13 +69,19 @@ six==1.16.0
 snowballstemmer==2.1.0
 soupsieve==2.2
 Sphinx==3.5.4
-sqlparse==0.4.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sqlparse==0.4.2
 testresources==2.0.1
 tinify==1.5.1
 tzlocal==2.1
-urllib3==1.26.4
+urllib3==1.26.12
 vine==5.0.0
 wadllib==1.3.5
 wcwidth==0.2.5
 webencodings==0.5.1
-xdg==5
+xdg==5.0.0
