--- a/Server-app/requirements.txt
+++ b/Server-app/requirements.txt
@@ -6,6 +6,7 @@ Babel==2.8.0
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 blinker==1.4
+cachetools==5.2.0
 capstone==4.0.2
 certifi==2022.6.15
 cffi==1.15.1
@@ -22,11 +23,17 @@ distro==1.5.0
 distro-info==1.0
 Django==4.1.1
 django-environ==0.9.0
+django-rename-app==0.1.3
 djangorestframework==3.13.1
 docutils==0.16
 future==0.18.2
 geographiclib==1.52
 geopy==2.2.0
+google-api-core==2.10.0
+google-api-python-client==2.60.0
+google-auth==2.11.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.56.4
 html5lib==1.1
 httplib2==0.18.1
 idna==2.10
@@ -46,8 +53,11 @@ pbr==5.6.0
 pexpect==4.8.0
 Pillow==9.2.0
 prompt-toolkit==3.0.31
+protobuf==4.21.5
 psycopg2==2.9.3
 ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.7.1
 pyparsing==3.0.9
@@ -62,8 +72,10 @@ reportlab==3.5.66
 requests==2.28.1
 roman==2.0.0
 ROPGadget==6.6
+rsa==4.9
 SecretStorage==3.3.1
 setproctitle==1.2.1
+sib-api-v3-sdk==7.5.0
 simplejson==3.17.2
 six==1.16.0
 snowballstemmer==2.1.0
@@ -79,6 +91,7 @@ sqlparse==0.4.2
 testresources==2.0.1
 tinify==1.5.1
 tzlocal==2.1
+uritemplate==4.1.1
 urllib3==1.26.12
 vine==5.0.0
 wadllib==1.3.5
