--- a/Server-app/requirements.txt
+++ b/Server-app/requirements.txt
@@ -60,6 +60,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 Pygments==2.7.1
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-debian==0.1.39
