--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -19,6 +19,13 @@ server {
                 proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_redirect        off;
         }
+        location /*.xml {
+                proxy_pass            http://localhost:8000;
+                proxy_set_header      Host $host;
+                proxy_set_header      X-Forwarded-Proto $scheme;
+                proxy_set_header      X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_redirect        off;
+        }
 
         location /static {
                 autoindex             on;
