--- a/Server-app/requirements.txt
+++ b/Server-app/requirements.txt
@@ -21,6 +21,7 @@ decorator==5.1.0
 distro==1.5.0
 distro-info==1.0
 Django==4.1.1
+django-cors-headers==3.13.0
 django-environ==0.9.0
 django-rename-app==0.1.3
 djangorestframework==3.13.1
