--- a/Server-app/requirements.txt
+++ b/Server-app/requirements.txt
@@ -1,4 +1,3 @@
-alabaster==0.7.8
 amqp==5.1.1
 APScheduler==3.7.0
 asgiref==3.5.2
@@ -6,24 +5,17 @@ Babel==2.8.0
 billiard==3.6.4.0
 blinker==1.4
 cachetools==5.2.0
-capstone==4.0.2
 certifi==2022.6.15
-cffi==1.15.1
+celery==5.1.2
+redis==3.5.3
 chardet==4.0.0
 charset-normalizer==2.1.1
-click==8.1.3
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.2.0
 colorama==0.4.4
 cryptography==38.0.1
 decorator==5.1.0
-distro==1.5.0
-distro-info==1.0
 Django==4.1.1
 django-cors-headers==3.13.0
 django-environ==0.9.0
-django-rename-app==0.1.3
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 docutils==0.16
@@ -47,59 +39,24 @@ lazr.restfulclient==0.14.2
 lazr.uri==1.0.5
 lxml==4.6.3
 MarkupSafe==2.1.1
-netifaces==0.10.9
 oauth2client==4.1.3
 oauthlib==3.1.0
-olefile==0.46
-packaging==20.9
 pbr==5.6.0
 pexpect==4.8.0
 Pillow==9.2.0
-prompt-toolkit==3.0.31
-protobuf==4.21.5
 psycopg2==2.9.3
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
 pycparser==2.21
-Pygments==2.7.1
 PyJWT==2.4.0
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
-python-dateutil==2.8.2
-python-debian==0.1.39
-python-magic==0.4.20
 pytz==2022.2.1
-pyxdg==0.27
 PyYAML==5.3.1
 ratelim==0.1.6
 reportlab==3.5.66
 requests==2.28.1
-roman==2.0.0
-ROPGadget==6.6
-rsa==4.9
-SecretStorage==3.3.1
-setproctitle==1.2.1
 sib-api-v3-sdk==7.5.0
 simplejson==3.17.2
 six==1.16.0
-snowballstemmer==2.1.0
-soupsieve==2.2
-Sphinx==3.5.4
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-sqlparse==0.4.2
-testresources==2.0.1
 tinify==1.5.1
 tzlocal==2.1
-uritemplate==4.1.1
 urllib3==1.26.12
-vine==5.0.0
-wadllib==1.3.5
-wcwidth==0.2.5
-webencodings==0.5.1
-xdg==5.0.0
