--- a/Client-app/package.json
+++ b/Client-app/package.json
@@ -36,6 +36,7 @@
     "@types/chart.js": "^2.9.37",
     "angular-bootstrap-md": "^13.0.0",
     "animate.css": "^4.1.1",
+    "aws-serverless-express": "^3.4.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.0",
     "express": "^4.18.1",
@@ -65,6 +66,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
+    "serverless-apigw-binary": "^0.4.4",
     "typescript": "~4.7.4"
   },
   "overrides": {
