--- a/Client-app/package.json
+++ b/Client-app/package.json
@@ -11,7 +11,8 @@
     "serve:ssr": "pm2 kill && pm2 start dist/FrontEnd/server/main.js -i max",
     "build:ssr": "ng build && ng run FrontEnd:server",
     "deploy": "npm run prerender --omit=dev && npm run build:ssr && npm run serve:ssr",
-    "prerender": "ng run FrontEnd:prerender"
+    "prerender": "ng run FrontEnd:prerender",
+    "build:sls": "ng build --prod && ng run angular-lambda-ssr:serverless:production"
   },
   "private": true,
   "dependencies": {
