Fix vercel deployment

--- a/Client-app/vercel.json
+++ b/Client-app/vercel.json
@@ -12,5 +12,6 @@
         "api/index.js": {
             "includeFiles": "dist/FrontEnd/browser/**"
         }
-    }
+    },
+    "installCommand": "npm install --legacy-peer-deps"
 }
