--- a/Client-app/vercel.json
+++ b/Client-app/vercel.json
@@ -13,5 +13,6 @@
             "includeFiles": "dist/FrontEnd/browser/**"
         }
     },
-    "installCommand": "npm install --legacy-peer-deps"
+    "installCommand": "npm install --legacy-peer-deps",
+    "buildCommand": "npm run build:ssr"
 }
