--- a/Client-app/vercel.json
+++ b/Client-app/vercel.json
@@ -13,7 +13,8 @@
             "includeFiles": "**",
             "optimize": {
                 "exclude": [
-                    "node_modules/**"
+                    "node_modules/**",
+                    "src/**"
                 ]
             }
         }
