Fix function files

--- a/Client-app/vercel.json
+++ b/Client-app/vercel.json
@@ -10,13 +10,7 @@
     ],
     "functions": {
         "api/index.js": {
-            "includeFiles": "**",
-            "optimize": {
-                "exclude": [
-                    "node_modules/**",
-                    "src/**"
-                ]
-            }
+            "includeFiles": "dist"
         }
     },
     "installCommand": "npm install --legacy-peer-deps",
