--- a/Client-app/vercel.json
+++ b/Client-app/vercel.json
@@ -10,9 +10,8 @@
     ],
     "functions": {
         "api/index.js": {
-            "includeFiles": "dist"
+            "includeFiles": "**",
+            "excludeFiles": "node_modules/**"
         }
-    },
-    "installCommand": "npm install --legacy-peer-deps",
-    "buildCommand": "npm run build:ssr"
+    }
 }
