Fix CI/CD workflow

--- a/.github/workflows/production_deploy.yml
+++ b/.github/workflows/production_deploy.yml
@@ -1,7 +1,13 @@
 name: Deploy On Server
-on: [push]
-jobs:
 
+on:
+  push:
+    branches:
+      - master
+    paths:
+      - '**'
+
+jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
