--- a/Server-app/docker-compose.yml
+++ b/Server-app/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: workire_db
     volumes:
       - ./postgres_data:/var/lib/postgresql/data/
+    ports:
+      - "5432:5432"
     env_file:
       - ./.env
     environment:
